<resources>
    <string name="app_name">Job Seeker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="jobs">Jobs</string>
    <string name="internship">Internship</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company Name</string>
    <string name="job_openings_type">Openings Type</string>
    <string name="company_type">Company Type</string>
    <string name="employee_name">Employee Name</string>
    <string name="salary">Salary</string>
    <string name="hiring_year">Hiring Year</string>
    <string name="about_job_seeker">About Job Seeker</string>
    <string name="top_hiring">Our Top Hiring</string>
    <string name="top_companies">Our Top Companies</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="linkedin">Connect With Us On Linkedin</string>
    <string name="connect_with_us_on_github">Connect With Us On GitHub</string>
    <string name="_912225">912225****</string>
    <string name="human_resource">Human Resource</string>
    <string name="india">India</string>
    <string name="address">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="appCompany">Company Name</string>
    <string name="piyushv528_gmail_com">Piyushv528@gmail.com</string>
    <string name="about_developer">About Developer</string>
    <string name="about_company">About Company</string>
    <string name="piyush_verma">Piyush Verma</string>
    <string name="android_developer_c_java_firebase_retrofit">Android Developer,C++,Java,Firebase,Retrofit</string>
    <string name="developed_by">Developed By</string>
    <string name="_84050">84050****</string>
    <string name="for_more_query">For More Query</string>
    <string name="android_development">Android Development</string>
    <string name="work_from_home">Work From Home</string>
    <string name="stipned">Salary:-</string>
    <string name="_10k">10k</string>
    <string name="create_a_new_job">Create A New Job</string>
    <string name="employers">This Section is only for the Employers those who create a job opportunity for the job seeker.</string>
    <string name="note">Note:-</string>
    <string name="enter_the_passcode">Enter The Passcode</string>
    <string name="submit">Submit</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_stream">Enter Stream</string>
    <string name="enter_job_type">Enter Job Type.....*Work From Home/ Office*</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="job_location">Job Location</string>
    <string name="submit_jobs">Submit Jobs</string>
    <string name="submit_internship">Submit Internship</string>
    <string name="sign">₹</string>
    <string name="search_job_by_location">Search Job By Location</string>
</resources>