<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:elevation="50dp"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:minWidth="120dp"
    app:cardCornerRadius="15dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="center"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CompanyImage"
        android:layout_marginTop="10dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/job"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/CompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/company_name"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/akaya_telivigala"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/openings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/alice"
        android:padding="10dp"
        android:text="@string/job_openings_type"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-15dp"
        android:textStyle="normal"
        android:padding="10dp"
        android:text="@string/company_type"
        android:textColor="@color/black"
        android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>