<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Fragments.AboutFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:fontFamily="@font/chonburi"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/developed_by"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/loginLogo"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:elevation="20dp"
                android:padding="5dp"
                android:src="@drawable/piyush"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:letterSpacing="0.08"
                android:padding="5dp"
                android:text="@string/piyush_verma"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:padding="5dp"
                android:fontFamily="@font/balthazar"
                android:text="@string/android_developer_c_java_firebase_retrofit"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_marginEnd="10dp"
            >


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:src="@drawable/info"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/balthazar"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/about_developer"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint"
                android:padding="10dp"
                android:layout_marginTop="-15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/address"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint"
                android:padding="10dp"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/piyushv528_gmail_com"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint"
                android:padding="10dp"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/_84050"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:src="@drawable/info"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/balthazar"
                    android:padding="5dp"
                    android:text="@string/about_company"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/address"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/appCompany"
                android:textColor="@color/hint"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_912225"
                android:textColor="@color/hint"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:id="@+id/gitCard"
            android:background="@color/white"

            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/git"
                android:layout_margin="5dp"
                android:padding="5dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/balthazar"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/connect_with_us_on_github"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginStart="20dp"
            android:id="@+id/linkCard"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/link"
                android:layout_margin="5dp"
                android:padding="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/balthazar"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/linkedin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>